Setting up typography

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="css/styles.css" />
 
     <link
@@ -16,5 +23,16 @@
 
     <title>Frontend Mentor | Product preview card component</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <div class="card__body">
+        <h3>PERFUME</h3>
+        <h1>Gabrielle Essence Eau De Parfum</h1>
+        <p class="card__text">
+          A floral, solar and voluptuous interpretation composed by Olivier
+          Polge, Perfumer-Creator for the House of CHANEL.
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
