--- a/index.html
+++ b/index.html
@@ -24,7 +24,20 @@
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
-    <div>
+    <div class="card">
+      <div>
+        <img
+          class="card__image-mobile"
+          src="images/image-product-mobile.jpg"
+          alt=""
+        />
+        <img
+          class="card__image-desktop"
+          src="images/image-product-desktop.jpg"
+          alt=""
+        />
+      </div>
+
       <div class="card__body">
         <h3>PERFUME</h3>
         <h1>Gabrielle Essence Eau De Parfum</h1>
