--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
-    <div class="card">
+    <div class="card grid grid--cols2">
       <div>
         <img
           class="card__image-mobile"
