Create a badge component.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
           A floral, solar and voluptuous interpretation composed by Olivier
           Polge, Perfumer-Creator for the House of CHANEL.
         </p>
+        <div class="badge--container">
+          <badge class="badge badge--primary">$149.99</badge>
+          <badge class="badge badge--small"> $169.99</badge>
+        </div>
       </div>
     </div>
   </body>
