--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   </head>
   <body>
     <div class="card grid grid--cols2">
+      <!-- Image section -->
       <div>
         <img
           class="card__image-mobile"
@@ -37,7 +38,7 @@
           alt=""
         />
       </div>
-
+      <!-- Card body -->
       <div class="card__body">
         <h3>PERFUME</h3>
         <h1>Gabrielle Essence Eau De Parfum</h1>
@@ -45,10 +46,14 @@
           A floral, solar and voluptuous interpretation composed by Olivier
           Polge, Perfumer-Creator for the House of CHANEL.
         </p>
-        <div class="badge--container">
-          <badge class="badge badge--primary">$149.99</badge>
-          <badge class="badge badge--small"> $169.99</badge>
+        <!-- Price section -->
+        <div class="price--container">
+          <ul class="price__list">
+            <li class="price__item-primary">$149.99</li>
+            <li class="price__item-small">$169.99</li>
+          </ul>
         </div>
+        <!-- Button section -->
         <button class="btn btn--primary">
           <svg
             class="icon"
