Add attribution and center the card.

--- a/index.html
+++ b/index.html
@@ -71,5 +71,8 @@
         </button>
       </div>
     </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Mutugi Chris</a>.
   </body>
 </html>
